# kraph

./: .clang-format  .clang_format  .gitmodules  CMakeLists.txt  LICENSE.md  LICENSE_MIT  README.md  app.js  app.wasm  index.html  pre-commit  style.css  ui.js
include/: bindings.hpp  edge.hpp  events.hpp  graph.hpp  node.hpp  uuid.hpp
js/: actions.js  geom.js  globals.js  listeners.js  tests.js  utils.js
old/: controller.hpp  dispatcher.hpp  js2cpp_old.hpp  ui_old.js
old/old/: cpp2js_old.hpp  event.hpp
old/pkg/: events.js  globals.js  listeners.js  utils.js
old/src/: chronology.cpp  events.cpp  events.hpp  graph.cpp  graph.hpp  main.cpp  wasm2js.cpp
old/tests/: testChronology.cpp
pkg/: events.js  globals.js  listeners.js  utils.js
src/: bindings.cpp  bindings.hpp  chronology.cpp  chronology.hpp  controller.hpp  edge.hpp  events.cpp  events.hpp  graph.cpp  graph.hpp  jsexport.hpp  jsexports.cpp  jsexports.hpp  main.cpp  node.hpp  ui_bindings.hpp  util.hpp  utils.hpp  uuid.hpp  wasm2js.cpp  wasm2js.hpp
tests/: testChronology.cpp  test_ chronology.cpp  test_chronology.cpp
